syntax = "proto3";

package order;

option go_package = "github.com/BullionBear/sequex/internal/model/protobuf/app/order;order";

import "app/shared.proto";

// Order message that uses shared types
message Order {
    string order_id = 1;
    string symbol = 2;
    double price = 3;
    double quantity = 4;
    shared.OrderSide side = 5;
    shared.UserInfo user = 6;
    int64 timestamp = 7;
}

// Order status enum
enum OrderStatus {
    ORDER_STATUS_PENDING = 0;
    ORDER_STATUS_FILLED = 1;
    ORDER_STATUS_CANCELLED = 2;
    ORDER_STATUS_REJECTED = 3;
}

// Order response message
message OrderResponse {
    string order_id = 1;
    OrderStatus status = 2;
    string message = 3;
    int64 timestamp = 4;
}
